Added tiny backend node server and reconfigured code accordingly

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --light-color: #d0eff2;
   --danger-color: #f2293a;
   --success-color: #37a672;
+  --yellow: #f2be22;
 }
 
 * {
@@ -285,6 +286,13 @@ img {
   color: #fff;
 }
 
+.btn-yellow,
+.badge-yellow {
+  background: var(--yellow);
+  color: #333;
+  border: #ccc solid 1px;
+}
+
 .btn-white,
 .bg-white,
 .badge-white,
@@ -370,7 +378,7 @@ table th {
 }
 
 .navbar a:hover {
-  color: var(--light-color);
+  color: var(--yellow);
 }
 
 .navbar .welcome span {
